--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
             "email": "luis_cruz@outlook.com"
         }
     ],
+    "autoload": {
+		"psr-4": {
+			"App\\": "src/"
+		}
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     } 
